# IN5050-Home-Exam-2

./: .gitignore  CMakeLists.txt  Makefile  c63.h  c63_write.c  c63_write.h  c63enc.c  common.c  common.h  dsp.c  dsp.h  io.c  io.h  me.c  tables.c  tables.h
golden/: c63dec  c63enc  c63pred
